<resources>

    <string name="facebook_app_id">1726696844252596</string>

    <string name="app_name">Ezyride</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="title_activity_xml_buttons">XmlButtons</string>
    <string name="title_activity_program_buttons">ProgramButtons</string>
    <string name="radial_time_picker_result_value">%1$d:%2$d</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="my_rides">My Rides</string>
    <string name="wallet">Wallet</string>
    <string name="about_us">About us</string>
    <string name="support">Support</string>
    <string name="how_it_works">How it works</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="messages">Messages</string>
    <string name="my_cars">My Cars</string>
    <string name="home">Home</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_ride">Search Ride</string>
    <string name="offer_ride">Offer Ride</string>
    <string name="not_logg_in_msg">You are not logged in. Please login to perform any operation</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="edit">Edit</string>
    <string name="car_no">Car No</string>
    <string name="car_model">Car Model</string>
    <string name="ac_availiblity">AC Availiblity</string>
    <string name="music_system">Music System</string>
    <string name="air_bag">Air bag</string>
    <string name="seat_belt">Seat belt</string>
    <string name="select_car_layout">SELECT CAR LAYOUT</string>
    <string name="mErrorStringResource">Select one of this</string>
    <string name="car_details">Car Details</string>
    <string name="Rs">\u20B9</string>.
    <string name="android_names">Existing Car</string>
    <string name="android_codes">Add new car</string>
    <string name="action_map">Location</string>
    <string name="action_filter">Filter</string>

    <string name="err_msg_first_name">Provide First Name</string>
    <string name="err_msg_last_name">Provide Last Name</string>
    <string name="err_msg_birth_date">Provide BirthDate</string>
    <string name="err_msg_email">Provide Valid Email Id</string>
    <string name="err_msg_code">Provide Country Code</string>
    <string name="err_msg_number">Provide Contact Number</string>
    <string name="err_msg_valid_number">Phone Number Must Contain 10 Digits</string>
    <string name="err_msg_password">Provide Password</string>
    <string name="err_valid_password">Password Must Contain 6 Characters</string>
    <string name="err_msg_price">Provide Rate Per Seat</string>
    <string name="err_msg_seat">Provide Available Seats</string>
    <string name="err_msg_date">Provide Date of Ride</string>
    <string name="err_msg_time">Provide Time of Ride</string>
    <string name="err_msg_car_spinner">Provide Car</string>
    <string name="err_msg_car_number">Provide Car Number</string>
    <string name="error_view_add_car">Add Car Now</string>
    <string name="error_title_ops">Oops …</string>
    <string name="error_subtitle_no_car_found">Seems like you haven\'t any Car yet.</string>
    <string name="error_subtitle_no_connection">Seems Like you don\'t have an internet Connection</string>
    <string name="error_subtitle_no_ride_found">No ride Found in your Area</string>
    <string name="error_view_find_ride">Find New Ride</string>


</resources>
