<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification1"
        android:icon="@drawable/ic_action_bell"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        app:showAsAction="ifRoom" />
</menu>
