<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        android:text="@string/not_logg_in_msg"
        android:textSize="20sp" />


    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="36dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonshape_blue"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/don_t_have_account_yet" />

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#607FD9"
        android:textSize="15dp" />

</LinearLayout>